# coverse

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
coverse/: __init__.py  config.py
coverse/agents/: converse_agent.py  multi_agent.py
coverse/apps/: __init__.py  gradio_app.py
coverse/cli/: __init__.py  main.py
coverse/cli/app/: __init__.py  serve.py
coverse/cli/topic/: __init__.py  multi_chat.py  prob_detect.py
coverse/core/: __init__.py  types.py
coverse/core/agents/: __init__.py  conversation.py  multi_agent.py
coverse/core/backends/: __init__.py  openai_chat.py
coverse/core/io/: __init__.py  experiments.py
coverse/entrypoints/: coverse_server.py
coverse/multi_agent/: multi_agent.py  multi_agent_batch_infer.py
coverse/prob_detect/: prob_detect.py  prob_detect_demo.py
coverse/scripts/: multi_converse_agent.py
coverse/topics/: __init__.py
coverse/topics/first_sentence_analysis/: README.md  __init__.py  analysis.py  common.py  download_models.sh  embedding_similarity.py  llm_sample.py  prompts.py  run_pipeline.sh
coverse/topics/first_sentence_baseline/: README.md  __init__.py  analysis.py  common.py  embedding_similarity.py  llm_sample.py  prompts.py  run_pipeline.sh
coverse/topics/multi_chat/: __init__.py  prompts.py  runner.py
coverse/topics/prob_detect/: __init__.py  runner.py  scorer.py
coverse/utils/: model_clients.py
tests/: test_agents.py  test_cli.py  test_first_sentence_analysis.py  test_first_sentence_baseline.py  test_side_effects.py
