[project]
name = "coverse"
version = "1.0.0"
description = "coverse"
authors = [{ name = "Eric Zhang" }]
readme = "README.md"
requires-python = "==3.11.*"
license = "MIT"

dependencies = [
    "numpy>=1.27",
    "pandas>=2.2",
    "gradio",
    "openai",
    "loguru>=0.7.3",
    "python-dotenv>=1.1.1",
    "pandas-stubs>=2.3.2.250926",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["coverse*"]
exclude = ["config*"]
